# dotfiles_old

./: .Xresources-regolith  .agignore  .aliases.zsh  .bash_profile  .bashrc  .clang-format  .clang-tidy  .clean_cpp_code.json  .clean_py_code.json  .cmake-format.yaml  .functions.zsh  .gdbinit  .gitattributes  .gitconfig  .gitignore  .gitignore_global  .gitmodules  .gnome_terminal_profile  .latex_papers.json  .lessfilters  .manpath  .nvidia-settings-rc  .pkglist  .pylamarc  .pylintrc  .style.yapf  .tmux.conf  .tmux.conf.local  .unity_config.profile  .vimrc  .xbindkeysrc  .xorg.conf  .xprofile  .zshenv  .zshrc  .zshrc.pre-oh-my-zsh  README.md
.fonts/: .uuid
.indicator-weather/: config.json
.xorg_config_files/: gtx.xorg.conf  quadro.xorg.conf
scripts/: aliases.zsh  cat_all_files  cat_all_files.zsh  cdtdebug  cdtdebug.zsh  check_gpu_status.py  code2color  compare_vdb_grids.zsh  compute_normals.py  convert_all_pcd2ply.sh  convert_all_pcd2ply.zsh  copy_dir_structure.zsh  copy_kitti_dir.zsh  cppbuild  cppbuild.zsh  create_abstract_kitti.zsh  create_cpp_project.sh  create_cpp_project.zsh  create_hotspot.sh  eval_kitti_all.zsh  eval_kitti_all_table.zsh  eval_kitti_seq.zsh  extract_audio.zsh  extract_viewpoint_from_clipboard.py  gpu_monitor.py  ignore.zsh  insall_zsh_no_root.sh  inspect_geometry.py  install_zsh_no_root.sh  ipb-split-tunneling  kitti_gt.zsh  lesspipe.sh  load_colors.zsh  merge_compile_commands.zsh  mount_dataserver.sh  mount_datasets.sh  mount_datasets.zsh  mount_remote.sh  mount_remote.zsh  nbcat.zsh  (+25 more)
scripts/cpp_template_project/: CMakeLists.txt  main.cpp
(+81 files in other folders)
